# moscow_deg_decode_votes

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/protos/: choices.proto  choices.rs  mod.rs
